--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ backend/.env
 backend/__pycache__
 backend/clients/__pycache__
 backend/services/__pycache__
+backend/tests/__pycache__
+backend/tests/clients/__pycache__
+backend/tests/services/__pycache__
